# openrobots-ontology

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pal-concepts.md
share/ontologies/: oro.owl
