<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oro</name>
  <version>2.1.0</version>
  <description>The OpenRobots ontology</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>Creative Commons 3.0 BY</license>
  <url type="website">http://kb.openrobots.org</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>
